# pydantic-airflow-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.astro/: config.yaml
dags/: example_dags.py
pydantic_airflow_agent/: agent.py
